
syntax = "proto3";

package pb;

option go_package = "./;pb";

// package pb;
option java_package = "pb";

message Err {
  int64 code = 1;
  string msg = 2;
}

message LatencyReq {
  int64 ts = 1;
}

message LatencyRsp {
  int64 ts = 1;
}

message AuthReq {
  string name = 1;
}

message AuthRsp {
  enum STATUS {
    Succ = 0;
    Fail = 1;
  }
  STATUS status = 1;
  Err err = 2;
}

message ClientsReq {
  repeated string names = 1;
}

enum Protocol {
  TCP = 0;
  UDP = 1;
}
message ClientInfo {
  string name = 1;
  string addr = 2;
  Protocol protocol = 3;
}

message ClientsRsp {
  repeated ClientInfo clients = 1;
}

message ConnToReq {
  ClientInfo client = 1;
  int64 timestamp = 2;
  int32 frequency = 3;  // 每秒执行多少次连接（并发）
}

message ConnToRsp {
  enum STATUS {
    Succ = 0;
    Fail = 1;
  }
  STATUS status = 1;
  Err err = 2;
}

message WaitConnReq {
  ClientInfo client = 1;
}

message WaitConnRsp {
  ClientInfo client = 1;
  int64 timestamp = 2;  // 开始执行时间
  int32 frequency = 3;  // 每秒执行多少次连接（并发）
}

// 定义服务
service Service {
  rpc Latency(LatencyReq) returns (LatencyRsp) {}
  rpc Auth(AuthReq) returns (AuthRsp) {}
  rpc Clients(ClientsReq) returns (ClientsRsp) {}
  rpc ConnTo(ConnToReq) returns (ConnToRsp) {}
  rpc WaitConn(WaitConnReq) returns (WaitConnRsp) {}
}

service Client {
  rpc ConnTo(ConnToReq) returns (ConnToRsp) {}
}